import Web3API binding

--- a/packages/schema-binding/src/bindings/wasm-as/templates/custom-type/index-ts.mustache
+++ b/packages/schema-binding/src/bindings/wasm-as/templates/custom-type/index-ts.mustache
@@ -1,6 +1,8 @@
 import { Nullable } from "@web3api/wasm-as";
-import { serialize{{name}} } from "./serialize";
-import { deserialize{{name}} } from "./deserialize";
+import {
+  serialize{{name}},
+  deserialize{{name}}
+} from "./serialization";
 
 export class {{name}} {
   {{#properties}}
