--- a/packages/schema-binding/src/bindings/wasm-as/templates/imported/type/serialization-ts.mustache
+++ b/packages/schema-binding/src/bindings/wasm-as/templates/imported/type/serialization-ts.mustache
@@ -56,5 +56,8 @@ export function deserialize{{name}}(buffer: ArrayBuffer): {{#toWasm}}{{return.ty
   {{/array}}
   {{/return}}
 }
+{{^last}}
+
+{{/last}}
 {{/methods}}
 {{/methods.length}}
