init _w3_call flow

--- a/packages/schema-binding/src/bindings/wasm-as/templates/custom-type/serialization-ts.mustache
+++ b/packages/schema-binding/src/bindings/wasm-as/templates/custom-type/serialization-ts.mustache
@@ -18,7 +18,7 @@ export function serialize{{name}}(type: {{name}}): ArrayBuffer {
 }
 
 function write{{name}}(writer: Write, type: {{name}}) {
-  writer.writeMapSize({{properties.length}});
+  writer.writeMapLength({{properties.length}});
   {{#properties}}
   writer.writeString("{{name}}");
   {{#scalar}}
