--- a/packages/schema-binding/src/bindings/wasm-as/templates/index-ts.mustache
+++ b/packages/schema-binding/src/bindings/wasm-as/templates/index-ts.mustache
@@ -1,6 +1,6 @@
 import {
-  w3_add_call,
-  w3_call
+  w3_add_invoke,
+  w3_invoke
 } from "@web3api/wasm-as";
 {{#queryTypes}}
 {{#methods.length}}
@@ -15,11 +15,11 @@ import {
 export function _w3_init(): void {
   {{#queryTypes}}
   {{#methods}}
-  w3_add_call("{{name}}", {{name}}Wrapped);
+  w3_add_invoke("{{name}}", {{name}}Wrapped);
   {{/methods}}
   {{/queryTypes}}
 }
 
-export function _w3_call(name_size: usize, args_size: usize): bool {
-  return w3_call(name_size, args_size);
+export function _w3_invoke(name_size: usize, args_size: usize): bool {
+  return w3_invoke(name_size, args_size);
 }
