--- a/demos/simple-storage/dapp/src/App.css
+++ b/demos/simple-storage/dapp/src/App.css
@@ -1,6 +1,8 @@
 .App {
   text-align: center;
   background-color: #2b2d31;
+  display: flex;
+  flex-direction: column;
 }
 
 .App-logo {
@@ -60,6 +62,11 @@ a:hover {
 
 h3 {
   margin-bottom: 5px;
+}
+
+h6 {
+  margin-bottom: 5px;
+  margin-top: 5px;
 }
 
 @keyframes App-logo-spin {
