--- a/packages/js/plugins/ens-codegen/templates/manifest.mustache
+++ b/packages/js/plugins/ens-codegen/templates/manifest.mustache
@@ -1,7 +1,7 @@
 import { PluginManifest, Uri } from "@web3api/core-js";
 
 export const manifest: PluginManifest = {
-  schema: "{{schema}}",
+  schema: `{{schema}}`,
   implemented: [new Uri("w3/api-resolver")],
   imported: [new Uri("ens/ethereum.web3api.eth")],
 };
