--- a/packages/js/core/scripts/manifest/migrate-ts.mustache
+++ b/packages/js/core/scripts/manifest/migrate-ts.mustache
@@ -18,7 +18,7 @@ import {
 } from "./migrators/{{version}}_to_{{#latest}}{{version}}{{/latest}}";
 {{/prevFormats}}
 
-import { Tracer } from "@web3api/tracing";
+import { Tracer } from "@web3api/tracing-js";
 
 type Migrator = {
   [key in {{#latest}}{{type}}{{/latest}}Formats]?: (m: Any{{#latest}}{{type}}{{/latest}}) => {{#latest}}{{type}}{{/latest}};
