--- a/packages/js/core/scripts/manifest/deserialize-ts.mustache
+++ b/packages/js/core/scripts/manifest/deserialize-ts.mustache
@@ -29,7 +29,7 @@ export const deserialize{{type}} = Tracer.traceFunc(
     }
 
     if (!options || !options.noValidate) {
-      validate{{type}}(any{{type}});
+      validate{{type}}(any{{type}}, options?.extSchema);
     }
 
     const versionCompare = compare(
