--- a/packages/js/core/scripts/manifest/validate-ts.mustache
+++ b/packages/js/core/scripts/manifest/validate-ts.mustache
@@ -52,10 +52,10 @@ export const validate{{#latest}}{{type}}{{/latest}} = Tracer.traceFunc(
 
     const throwIfErrors = (result: ValidatorResult) => {
       if (result.errors.length) {
-        throw [
-          new Error(`Validation errors encountered while sanitizing {{#latest}}{{type}}{{/latest}} format ${manifest.format}`),
-          ...result.errors.map((error: ValidationError) => new Error(error.toString()))
-        ];
+        throw new Error([
+          `Validation errors encountered while sanitizing {{#latest}}{{type}}{{/latest}} format ${manifest.format}`,
+          ...result.errors.map((error: ValidationError) => error.toString())
+        ].join("\n"));
       }
     };
 
