--- a/packages/js/core/scripts/manifest/deserialize-ts.mustache
+++ b/packages/js/core/scripts/manifest/deserialize-ts.mustache
@@ -29,6 +29,8 @@ export const deserialize{{type}} = Tracer.traceFunc(
       throw Error(`Unable to parse {{type}}: ${manifest}`);
     }
 
+    any{{type}}.__type = "{{type}}";
+
     if (!options || !options.noValidate) {
       validate{{type}}(any{{type}}, options?.extSchema);
     }
