--- a/packages/js/plugins/ens-codegen/templates/manifest.mustache
+++ b/packages/js/plugins/ens-codegen/templates/manifest.mustache
@@ -1,6 +1,6 @@
-import { PluginManifest, Uri } from "@web3api/core-js";
+import { PluginPackageManifest, Uri } from "@web3api/core-js";
 
-export const manifest: PluginManifest = {
+export const manifest: PluginPackageManifest = {
   schema: `{{schema}}`,
   implements: [new Uri("w3/api-resolver")],
 };
